# chip8

./: README.md  meson.build
.cache/clangd/index/: cpu.cpp.3F102FAE70264B91.idx  cpu.h.6C110783123CF9C1.idx  main.cpp.F303DD42615A430A.idx  memory.cpp.1E4E896920CDA766.idx  memory.h.C90F26E8E216B569.idx
src/: chip8.cpp  chip8.h  cpu.cpp  cpu.h  hardware.cpp  hardware.hpp  instructions.cpp  instructions.hpp  main.cpp  memory.cpp  memory.h  meson.build
